<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ciis_front"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ciis_50_logo_circ"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="100dp"/>

        <LinearLayout
            android:id="@+id/text_body_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_top"
            android:layout_marginTop="54dp"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:padding="8dp">

            <ImageView
                android:id="@+id/image_logo_top"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ciis_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_company_address_line_1"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_company_address_line_2"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_company_email"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_company_phone"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="sendEmail"
                android:background="@color/colorPrimary"
                app:srcCompat="@android:drawable/ic_dialog_email" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:onClick="visitWebSite"
                android:text="@string/text_button"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:padding="8dp"
                android:layout_margin="2dp"
                android:textAlignment="center" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:onClick="makeCall"
                android:background="@color/colorPrimary"
                app:srcCompat="@android:drawable/sym_call_outgoing" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>